<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_alertas"
    tools:context="info.androidhive.materialdesign.activity.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@color/color_01"
        android:padding="10dp"
        android:layout_margin="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_Nombre"
            android:id="@+id/label_Nombre"
            android:textColor="@color/txt_remarcado"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_no_data"
            android:id="@+id/Nombre"
            android:textColor="@color/txt_texto"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_Fono1"
            android:id="@+id/label_Fono"
            android:textColor="@color/txt_remarcado"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_no_data"
            android:id="@+id/Fono"
            android:textColor="@color/txt_texto"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="5dp" />




        <Button
            android:id="@+id/btnOpenContact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@drawable/my_btn_20"
            android:text="@string/btn_getcontact"
            android:textAllCaps="false"
            android:textColor="@color/btn_text1"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnCompartir"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/my_btn_20"
            android:text="@string/btn_compartir"
            android:textAllCaps="false"
            android:textColor="@color/btn_text1"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/my_btn_20"
            android:text="@string/btn_volver"
            android:textAllCaps="false"
            android:textColor="@color/btn_text1"
            android:textSize="15dp" />

    </LinearLayout>





</RelativeLayout>