<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_alertas"
    tools:context="info.androidhive.materialdesign.activity.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="0dp"
        android:layout_alignParentTop="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/linearLayout2"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"
            android:background="@color/color_01">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_Nombre"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_Rut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Rut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_Rut"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="5dp"
                android:imeOptions="actionNext"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_Edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_edad"
                    android:inputType="number"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_fNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_fNacimiento"
                    android:inputType="date"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="5dp"
                android:imeOptions="actionNext"/>

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="5dp"
                android:imeOptions="actionNext"/>

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="5dp"
                android:imeOptions="actionNext"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_Direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_Direccion"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_Fono1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Fono1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_Fono1"
                    android:inputType="phone"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/widget_Fono2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Fono2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_Fono2"
                    android:inputType="phone"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btnGuardar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_update"
                android:background="@drawable/my_btn_20"
                android:textColor="@color/btn_text1"
                android:layout_marginTop="40dp"/>

            <Button android:id="@+id/btnVolver"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_volver"
                android:background="@drawable/my_btn_20"
                android:textColor="@color/btn_text1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
