<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_alertas"
    tools:context="info.androidhive.materialdesign.activity.HomeFragment"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/linearLayout2"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:background="@color/color_01"
        android:gravity="top"
        android:baselineAligned="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="5dp"
            android:imeOptions="actionNext"/>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="5dp"
            android:imeOptions="actionNext"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/widget_Direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_descripcion"
                android:inputType="textMultiLine"
                android:height="120dp"
                android:gravity="top" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btnSiguiente"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_siguiente"
            android:background="@drawable/my_btn_19"
            android:textColor="@color/btn_text1"
            android:layout_marginTop="40dp"/>

        <Button android:id="@+id/btnVolver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_volver"
            android:background="@drawable/my_btn_22"
            android:textColor="@color/btn_text1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp" />

    </LinearLayout>


</RelativeLayout>
